@@ -1,3 +1,7 @@
+2009-07-15  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb: controller action.
+
 2009-07-14  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb: form parameters.
